--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.0.0",
     "framer-motion": "^11.0.3",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
